<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CalendarioActivity"
    tools:showIn="@layout/app_bar_calendario"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/borda"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Mês"
                android:textAlignment="center"
                android:textSize="20dp"
                android:id="@+id/txtData"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnDiminuir"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@android:color/transparent"
                    android:text="&lt;" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnAumentar"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@android:color/transparent"
                    android:text="&gt;" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/domingo_abr"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/segunda_abr"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/terca_abr"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/quarta_abr"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/quinta_abr"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/sexta_abr"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/sabado_abr"
                android:textAlignment="center"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt11"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp"
                android:text="1"/>

            <TextView
                android:id="@+id/txt12"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp"
                android:text="2"/>

            <TextView
                android:id="@+id/txt13"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt14"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt15"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt16"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt17"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt21"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt22"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt23"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt24"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt25"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt26"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt27"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt31"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt32"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt33"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt34"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt35"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt36"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt37"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt41"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt42"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt43"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt44"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt45"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt46"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt47"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt51"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt52"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt53"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt54"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt55"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt56"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt57"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt61"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt62"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt63"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt64"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt65"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt66"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txt67"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="selecionarDia"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="17dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>